--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 <html>
+     <head>
+        <title>Introduction to HTML with GitHub</title>
+    </head>
     <body>
       <h1>Hello there, awesome person!</h1>
     </body>
