--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Introduction to HTML with GitHub</title>
     </head>
     <body>
-      <h1>Hello there, awesome person!</h1>
+     <h1>Lets get started!</h1>
+         
+         Hello there, awesome person!
+    
     </body>
 </html>
