Update index add img.html
adding img to body

Co-authored-by: github-learning-lab[bot] <37936606+github-learning-lab[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Introduction to HTML with GitHub</title>
     </head>
     <body>
-     <h1>Lets get started!</h1>
+<img src="https://avatars.githubusercontent.com/u/86413479?v=4">
+
          
          Hello there, awesome person!
     
