Add list elements
add a few favorite websites

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <title>Introduction to HTML with GitHub</title>
     </head>
     <body>
-<img src="https://avatars.githubusercontent.com/u/86413479?v=4">
-
-         
-         Hello there, awesome person!
+          <img src="https://avatars.githubusercontent.com/u/86413479?v=4">
+          Hello there, awesome person!
+          <ul>
+               <li>LinkedIn</li>
+               <li>Printest</li>
+               <li>Aktiennews</li>
+          </ul>
     
     </body>
 </html>
