--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <body>
           <img src="https://avatars.githubusercontent.com/u/86413479?v=4">
           Hello there, awesome person!
+         
           <ul>
-               <li>LinkedIn</li>
-               <li>Printest</li>
-               <li>Aktiennews</li>
+               <li><a href="https://linkedin.com">LinkedIn</a></li>
+               <li><a href="https://printest.com">Printest</a></li>
+               <li><a href="https://www.boerse-online.de/aktien/nachrichten">Aktiennews</a></li>
           </ul>
     
     </body>
