--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
      <head>
         <title>Introduction to HTML with GitHub</title>
+          <link rel="stylesheet" href="style.css">
     </head>
     <body>
           <img src="https://avatars.githubusercontent.com/u/86413479?v=4">
